# machine-lord-rap-station

./: .gitignore  CLAUDE.md  CMakeLists.txt  GEMINI.md  README.md
Source/: FactoryLookAndFeel.h  Main.cpp  MainComponent.cpp  MainComponent.h
Source/DSP/: Generator.h  Instruments.h
